blue-green/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  namespace: argoexamples
spec:
  ingressClassName: nginx
  rules:
    - host: guestbook.control-plane.release.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
